tests/rosetta/out/Pascal/averages-pythagorean-means.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/averages-pythagorean-means.pas
averages-pythagorean-means.pas(34,11) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
averages-pythagorean-means.pas(38,16) Note: Call to subroutine "operator +(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
averages-pythagorean-means.pas(38,16) Note: Call to subroutine "operator :=(const source:Double):Variant;" marked as inline is not inlined
averages-pythagorean-means.pas(38,16) Note: Call to subroutine "operator div(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
averages-pythagorean-means.pas(38,23) Note: Call to subroutine "operator :=(const source:ShortInt):Variant;" marked as inline is not inlined
averages-pythagorean-means.pas(39,17) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
averages-pythagorean-means.pas(44,14) Note: Call to subroutine "operator :=(const source:Variant):Double;" marked as inline is not inlined
averages-pythagorean-means.pas(64,10) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):Double is nested;Register>"
averages-pythagorean-means.pas(71,16) Error: Operator is not overloaded: "<procedure variable type of function(Variant):Double is nested;Register>" + "Double"
averages-pythagorean-means.pas(72,30) Error: Operator is not overloaded: "ShortInt" div "Double"
averages-pythagorean-means.pas(76,12) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
averages-pythagorean-means.pas(77,8) Error: Incompatible types: got "<procedure variable type of function(Variant):Double is nested;Register>" expected "Int64"
averages-pythagorean-means.pas(77,16) Error: Incompatible types: got "<procedure variable type of function(Variant):LongInt is nested;Register>" expected "Int64"
averages-pythagorean-means.pas(79,14) Error: Operator is not overloaded: "<procedure variable type of function(Variant):LongInt is nested;Register>" div "Double"
averages-pythagorean-means.pas(80,29) Error: Incompatible type for arg no. 1: Got "<procedure variable type of function(Variant):Double is nested;Register>", expected "QWord"
averages-pythagorean-means.pas(80,75) Error: Incompatible type for arg no. 1: Got "<procedure variable type of function(Variant):LongInt is nested;Register>", expected "QWord"
averages-pythagorean-means.pas(81,42) Error: Operator is not overloaded: "<procedure variable type of function(Variant):Double is nested;Register>" >= "Variant"
averages-pythagorean-means.pas(81,55) Error: Operator is not overloaded: "Variant" >= "<procedure variable type of function(Variant):LongInt is nested;Register>"
averages-pythagorean-means.pas(87) Fatal: There were 11 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
