tests/rosetta/out/Pascal/averages-pythagorean-means.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:12Z
program AveragesPythagoreanMeans;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function powf(base: double; exp: integer): double;
var
  i: integer;
  _result: double;
begin
  _result := 1;
  i := 0;
  while (i < exp) do
  begin
    _result := _result * base;
    i := i + 1;
  end;
  result := _result;
  exit;
end;

function nthRoot(x: double; n: integer): double;
var
  high: Variant;
  i: integer;
  low: double;
  mid: Variant;
begin
  low := 0;
  high := x;
  i := 0;
  while (i < 60) do
  begin
    mid := low + high div 2;
    if (powf(mid, n) > x) then
    begin
      high := mid;
    end else
    begin
      low := mid;
    end;
    i := i + 1;
  end;
  result := low;
  exit;
end;

function main(): integer;
var
  a: function(p0: Variant): double is nested;
  count: function(p0: Variant): integer is nested;
  f: double;
  g: Variant;
  h: function(p0: Variant): integer is nested;
  n: integer;
  prod: double;
  sum: function(p0: Variant): double is nested;
  sumRecip: double;
begin
  sum := 0;
  sumRecip := 0;
  prod := 1;
  n := 1;
  while (n <= 10) do
  begin
    f := Double(n);
    sum := sum + f;
    sumRecip := sumRecip + 1 div f;
    prod := prod * f;
    n := n + 1;
  end;
  count := 10;
  a := sum div count;
  g := nthRoot(prod, 10);
  h := count div sumRecip;
  writeln('A: ' + IntToStr(a) + ' G: ' + IntToStr(g) + ' H: ' + IntToStr(h));
  writeln('A >= G >= H: ' + IntToStr(((a >= g) and (g >= h))));
end;

begin
  main();
end.
